--- a/04_scrollama/style.css
+++ b/04_scrollama/style.css
@@ -9,8 +9,7 @@ body {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   min-height: 1280px;
   color: #3b3b3b;
   font-size: 24px;
@@ -25,15 +24,6 @@ a {
   margin: 0;
   font-weight: 400;
 }
-
-a,
-a:visited,
-a:hover {
-  color: teal;
-  text-decoration: none;
-  border-bottom: 2px solid currentColor;
-}
-
 
   #scrolly {
     position: relative;
@@ -79,6 +69,7 @@ a:hover {
   }
 
   figure {
+    background-color: grey;
     position: -webkit-sticky;
     position: sticky;
     width: 100%;
@@ -93,12 +84,6 @@ position: relative;
 top:0;
 }
 
-#berlinMap{
-position: absolute;
-right: 0;
-top: 0;
-width: 50%;
-}
 
   .step {
     margin: 0 auto 2rem auto;
@@ -113,7 +98,7 @@ width: 50%;
 
   .step.is-active {
     background-color: white;
-    color: black;
+    color: red;
     font-weight: bold;
   }
 
