--- a/04_scrollama/style.css
+++ b/04_scrollama/style.css
@@ -25,85 +25,83 @@ a {
   font-weight: 400;
 }
 
-  #scrolly {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    background-color: white;
-    padding: 1rem;
-  }
+#scrolly {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: white;
+  padding: 1rem;
+}
 
-  #scrolly > * {
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-  }
+#scrolly>* {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
 
-  #intro {
-    max-width: 40rem;
-    margin: 1rem auto;
-    text-align: center;
-    margin-bottom: 100px;
-  }
+#intro {
+  max-width: 50rem;
+  margin: 1rem auto;
+  text-align: center;
+  margin-bottom: 100px;
+}
 
-  .intro__hed {
-    font-size: 2em;
-    margin: 2rem auto 0.5rem auto;
-  }
-
-  .intro__dek {
-    color: #8a8a8a;
-  }
-
-
-  #outro {
-    background-color: grey;
-    height: 300px;
-  }
-
-  article {
-    position: relative;
-    padding: 0 1rem;
-    max-width: 30rem;
-  }
-
-  figure {
-    background-color: grey;
-    position: -webkit-sticky;
-    position: sticky;
-    width: 100%;
-    margin: 0;
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-
-#visualization{
-position: relative;
-top:0;
+.intro__hed {
+  font-size: 2em;
+  margin: 2rem auto 0.5rem auto;
 }
 
 
-  .step {
-    margin: 0 auto 2rem auto;
-    background-color: white;
-    color: grey;
-    font-weight: normal;
-  }
+#outro {
+  color: white;
+  padding: 20px;
+  text-align: center;
+  background-color: MediumPurple;
+  height: 300px;
+}
 
-  .step:last-child {
-    margin-bottom: 0;
-  }
+article {
+  position: relative;
+  padding: 0 1rem;
+  max-width: 30rem;
+}
 
-  .step.is-active {
-    background-color: white;
-    color: red;
-    font-weight: bold;
-  }
+figure {
+  background-color: grey;
+  position: -webkit-sticky;
+  position: sticky;
+  width: 100%;
+  margin: 0;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
 
-  .step p {
-    text-align: left;
-    padding: 1rem;
-    font-size: 1.5rem;
-  }
+#visualization {
+  position: relative;
+  top: 0;
+}
+
+.step {
+  margin: 0 auto 2rem auto;
+  background-color: AliceBlue;
+  color: grey;
+  font-weight: normal;
+}
+
+.step:last-child {
+  margin-bottom: 0;
+}
+
+.step.is-active {
+  background-color: LightSkyBlue;
+  color: black;
+  font-weight: bold;
+}
+
+.step p {
+  text-align: left;
+  padding: 1rem;
+  font-size: 1.5rem;
+}
