--- a/04_scrollama/style.css
+++ b/04_scrollama/style.css
@@ -68,7 +68,7 @@ article {
 }
 
 figure {
-  background-color: grey;
+  background-color: rgb(217, 217, 217);
   position: -webkit-sticky;
   position: sticky;
   width: 100%;
