--- a/04_scrollama/style.css
+++ b/04_scrollama/style.css
@@ -58,6 +58,7 @@ a {
   padding: 20px;
   text-align: center;
   background-color: MediumPurple;
+  margin-top: 300px;
   height: 300px;
 }
 
@@ -79,8 +80,17 @@ figure {
 }
 
 #visualization {
-  position: relative;
+  position: absolute;
   top: 0;
+}
+
+#houseSVG{
+  position: absolute;
+  top: 0;
+  width:100%;
+  max-height: 100%;
+  display:none;
+  opacity: 0;
 }
 
 .step {
