--- a/03_scrollama/style.css
+++ b/03_scrollama/style.css
@@ -9,7 +9,8 @@ body {
 }
 
 body {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   min-height: 1280px;
   color: #3b3b3b;
   font-size: 24px;
@@ -25,26 +26,19 @@ a {
   font-weight: 400;
 }
 
-#scrolly {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: white;
-  padding: 1rem;
-}
-
-#scrolly>* {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+a,
+a:visited,
+a:hover {
+  color: teal;
+  text-decoration: none;
+  border-bottom: 2px solid currentColor;
 }
 
 #intro {
-  max-width: 50rem;
+  max-width: 40rem;
   margin: 1rem auto;
   text-align: center;
-  margin-bottom: 100px;
+  margin-bottom: 120px;
 }
 
 .intro__hed {
@@ -52,24 +46,36 @@ a {
   margin: 2rem auto 0.5rem auto;
 }
 
+.intro__dek {
+  color: #8a8a8a;
+}
 
 #outro {
-  color: white;
-  padding: 20px;
-  text-align: center;
-  background-color: MediumPurple;
-  margin-top: 300px;
-  height: 300px;
+  height: 320px;
+}
+
+#scrolly {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #f3f3f3;
+  padding: 1rem;
+}
+
+#scrolly > * {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 article {
   position: relative;
   padding: 0 1rem;
-  max-width: 30rem;
+  max-width: 20rem;
 }
 
 figure {
-  background-color: rgb(217, 217, 217);
   position: -webkit-sticky;
   position: sticky;
   width: 100%;
@@ -77,27 +83,34 @@ figure {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
+  background-color: #8a8a8a;
+  z-index: 0;
 }
 
-#visualization {
+figure p {
+  text-align: center;
+  padding: 1rem;
   position: absolute;
-  top: 0;
+  top: 50%;
+  left: 50%;
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-size: 8rem;
+  font-weight: 900;
+  color: #fff;
 }
 
-#houseSVG{
+figure > * {
   position: absolute;
   top: 0;
-  width:100%;
-  max-height: 100%;
-  display:none;
-  opacity: 0;
+  left: 0;
 }
 
 .step {
   margin: 0 auto 2rem auto;
-  background-color: AliceBlue;
-  color: grey;
-  font-weight: normal;
+  background-color: #3b3b3b;
+  color: #fff;
 }
 
 .step:last-child {
@@ -105,22 +118,12 @@ figure {
 }
 
 .step.is-active {
-  background-color: LightSkyBlue;
-  color: black;
-  font-weight: bold;
+  background-color: goldenrod;
+  color: #3b3b3b;
 }
 
 .step p {
-  text-align: left;
+  text-align: center;
   padding: 1rem;
   font-size: 1.5rem;
-}
-
-#clickhier{
-  cursor: pointer;
-  background-color: orange;
-  color: white;
-  font-style: italic;
-  font-weight: bold;
-  padding: 1px;
 }
